# CircleMUD

./: .gitignore  README.md  configure
circlemud_ffi_client/: Cargo.toml  README.md
circlemud_ffi_client/src/: descriptor.rs  lib.rs  slack_descriptor.rs  telnet_descriptor.rs
cnf/: configure.in
mud-comms/: Cargo.toml
mud-comms/src/: descriptor.rs  lib.rs  slack.rs  socket_libc.rs  socket_std.rs
mud-comms/tests/: telnet.rs
mud-comms/tests/admin_lib/etc/: players
mud-comms/tests/admin_lib/plrobjs/A-E/: admin.objs
src/: Makefile.in  clients.h  comm.c  comm.h  descriptor.h  interpreter.c  structs.h  sysdep.h
