[package]
name = "mud-comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.144"
dns-lookup = "1.0.8"
crossbeam-channel = "0.5.8"

[dev-dependencies]
tempdir = "0.3.7"
bstr = "1.5.0"

[lib]
crate-type = ["staticlib"]
