[package]
name = "mud-comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0.8"  # common dependency for SocketDescriptorManager
libc = "0.2.144" # socket_libc
crossbeam-channel = "0.5.8" # socket_std
# slack
slack-morphism-models = "0.6.1"
slack-morphism-hyper = "0.6.1"
slack-morphism = "0.6.1"
tokio = { version = "1.0", features = ["full"] }
hyper = { version ="0.14", features = ["full"] }
# logging
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempdir = "0.3.7"
bstr = "1.5.0"

[lib]
crate-type = ["staticlib"]
